--- a/css/carousel.css
+++ b/css/carousel.css
@@ -10,7 +10,7 @@
 }
 
 .section-portfolio .background-image{
-  background-image: url(/Design/backgorund_image/portfolio.jpg);
+  background-image: url(/Design/background_image/portfolio.jpg);
   background-position: center center;
   background-size: cover;
   position: absolute;
@@ -101,7 +101,6 @@
 
 .wrapper {
   display: flex;
-
   overflow-x: auto;
   gap: clamp(10px, 1vw, 40px);
   width: 100%;
@@ -293,7 +292,46 @@
 }
 
 @media (max-width: 480px) {
-  .carousel .text p {
+  .carousel .slide:first-child .text p {
     display: none;
   }
+  
+}
+
+/* Modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  padding-top: 60px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 1000px;
+}
+
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
 }
