--- a/css/header.css
+++ b/css/header.css
@@ -104,6 +104,9 @@
 
 .gtranslate_wrapper {
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Estilos para o seletor de idiomas */
