--- a/css/clientes.css
+++ b/css/clientes.css
@@ -7,6 +7,7 @@
     background-color: transparent;
     font-family: 'Arial', sans-serif;
     color: #FFF;
+    font-size: clamp(22px,4vw,42px);
 }
 
 .clientes .background-image{
@@ -31,7 +32,7 @@
 .clientes h1 {
     z-index: 1;
     color: #FFF;
-    font-size: clamp(20px, 3vw, 36px);
+    font-size: 1.2em;
     text-align: center;
     margin-bottom: clamp(10px, 1vw, 30px);
 }
