--- a/css/skills.css
+++ b/css/skills.css
@@ -40,7 +40,7 @@
   color: #FFF;
   font-size: 1em;
   text-align: center;
-  margin-bottom: clamp(10px, 1vw, 30px)
+  margin: clamp(10px, 1vw, 30px) 0;
 }
 
 .skills-experience h2::after {
