atualizacao tags meta e css do /page/links.html

--- a/css/pagelinks.css
+++ b/css/pagelinks.css
@@ -31,7 +31,7 @@ body, html {
 }
 
 .hero {
-    background-image: url('../design/background_image/pagelinks.jpg');
+    background-image: url(../design/background_image/pagelinks.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
