--- a/css/pagelinks.css
+++ b/css/pagelinks.css
@@ -8,7 +8,7 @@ body, html {
 
 .section {
     display: flex;
-    justify-content:center;
+    justify-content: center;
     align-items: center;
     scroll-snap-align: start;
     width: 100%;
@@ -18,6 +18,10 @@ body, html {
 .section.hero {
     height: 100vh;
     background-color: #0f0f0f;
+    background-image: url('../design/background_image/pagelinks.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
     position: relative;
 }
 
@@ -26,15 +30,8 @@ body, html {
     flex-direction: column;
     background: linear-gradient(135deg, #ff9d64, #ff3f00, #ff2100);
     padding: 20px;
-    justify-content:space-around;
+    justify-content: space-around;
     gap: 20px;
-}
-
-.hero {
-    background-image: url(../design/background_image/pagelinks.jpg);
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
 }
 
 .socials a {
@@ -46,8 +43,8 @@ body, html {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: clamp(200px,30vw,30vw);
-    padding: clamp(10px,1vw,1vw);
+    width: clamp(200px, 30vw, 30vw);
+    padding: clamp(10px, 1vw, 1vw);
     transition: transform 0.3s ease, background 0.3s ease;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     gap: 10px;
@@ -58,15 +55,6 @@ body, html {
     transform: scale(1.05);
 }
 
-.socials a:hover .icon,
-.socials a:hover .span {
-    transform: scale(1.05);
-}
-
-.socials a:hover .icon::before{
-    transition: transform 0.3s ease
-}
-
 .socials a .icon {
     font-size: clamp(18px, 1.2em, 42px);
     display: flex;
@@ -74,7 +62,7 @@ body, html {
     justify-content: center;
     box-sizing: border-box;
     line-height: 1;
-    transition: transform 0.3s ease
+    transition: transform 0.3s ease;
 }
 
 .scroll-indicator {
@@ -100,7 +88,6 @@ body, html {
 .scroll-indicator:hover::after {
     animation: none;
 }
-
 
 @keyframes bounce {
     0%, 20%, 50%, 80%, 100% {
