add aspas nos caminhos de imagens para ver se resolve erro no github pages

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -10,7 +10,7 @@
 }
 
 .section-portfolio .background-image{
-  background-image: url(/design/background_image/portfolio.jpg);
+  background-image: url('../design/background_image/portfolio.jpg');
   background-position: center center;
   background-size: cover;
   position: absolute;
