--- a/css/service.css
+++ b/css/service.css
@@ -45,7 +45,7 @@
     display: flex;
     justify-content: center;
     flex-direction: row;
-    align-items: center;
+    align-items: stretch; /* Garantir que os cards se estiquem igualmente */
     flex-wrap: wrap;
     gap: clamp(20px,1.5vw,20px);
     z-index: 1;
@@ -57,7 +57,7 @@
     flex-direction: row;
     margin: 0;
     justify-content: center;
-    align-items: center;
+    align-items: stretch; /* Garantir que os cards se estiquem igualmente */
     gap: clamp(20px,1.5vw,20px);
 }
 
@@ -83,7 +83,6 @@
     border-radius: 15px;
     padding: 20px clamp(20px,2vw,50px);
     width: clamp(350px,22vw,400px);
-    height: clamp(420px, 33vw,500px);
     box-shadow: 0 0 20px rgba(102, 102, 102, 0.4);
     color: #fff;
     text-align: center;
@@ -160,6 +159,6 @@
 @media (max-width: 768px) { /* ajuste a condição conforme necessário */
     .servicos .card {
         width: clamp(100px, 60vw, 300px);
-        height: 100%; /* Esta altura será 100% do container pai */
+        height: auto; /* Esta altura será 100% do container pai */
     }
 }
