ajuste efeito de texto hero e na sessão skill-experience

--- a/css/skills.css
+++ b/css/skills.css
@@ -4,12 +4,15 @@
   justify-content: space-between;
   padding: 2vw 7.5vw;
   gap: 4vw;
-  font-size: clamp(22px,4vw,46px)
+  font-size: clamp(22px,4vw,46px);
 }
 
 .skills, .experience {
   flex: 1;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  max-height: 100vh;
 }
 
 .skills-experience .background-image{
@@ -21,15 +24,15 @@
   background-image: url('../design/background_image/section_skills.jpg');
   background-position: center center;
   background-size: cover;
-  opacity: 0.5;
+  opacity: 0.5
 }
 
 .skills-grid, .experience-grid {
   display: grid;
   gap: 2vw;
-  max-height: 700px; /* Limita a altura máxima a 500px */
-  overflow-y:auto; /* Adiciona a barra de rolagem vertical */
+  overflow-y: auto;
   padding-right: 10px;
+  flex-grow: 1; /* Faz com que as grids ocupem o espaço restante */
 }
 
 .skills-grid {
@@ -41,6 +44,7 @@
   font-size: 1em;
   text-align: center;
   margin: clamp(10px, 1vw, 30px) 0;
+  flex-shrink: 0; /* Garante que o h2 não encolha */
 }
 
 .skills-experience h2::after {
