--- a/css/skills.css
+++ b/css/skills.css
@@ -12,7 +12,9 @@
   z-index: 1;
   display: flex;
   flex-direction: column;
-  max-height: 100vh;
+  height: 100vh;
+  max-height: 800px;
+  min-height: 600px;
 }
 
 .skills-experience .background-image{
